使用 NoSQL数据库-mongodb

--- a/springboot-demo-20/src/main/resources/application-dev.properties
+++ b/springboot-demo-20/src/main/resources/application-dev.properties
@@ -32,9 +32,9 @@ spring.redis.port=6379
 #spring.redis.timeout=0
 
 
-# MONGODB (MongoProperties) 这里配置会报错  Caused by: org.springframework.beans.BeanInstantiationException: Failed to instantiate [com.mongodb.MongoClient]: Factory method 'mongo' threw exception; nested exception is java.lang.IllegalStateException: Invalid mongo configuration, either uri or host/port/credentials must be specified
-#spring.data.mongodb.uri=mongodb://localhost/test
-#spring.data.mongodb.port=27017
+# MONGODB (MongoProperties)  使用嵌入式Mongodb
+spring.data.mongodb.uri=mongodb://localhost/test
+spring.data.mongodb.port=27017
 #spring.data.mongodb.authentication-database=
 #spring.data.mongodb.database=test
 #spring.data.mongodb.field-naming-strategy=
