--- a/springboot-demo-21/pom.xml
+++ b/springboot-demo-21/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.titaniume</groupId>
-	<artifactId>springboot-demo-20</artifactId>
+	<artifactId>springboot-demo-21</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>springboot-demo-20</name>
-	<description>使用 NoSQL数据库-mongodb</description>
+	<name>springboot-demo-21</name>
+	<description>使用 Caching-EhCache</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
