使用异步消息服务-JMS(ActiveMQ)

--- a/springboot-demo-23/src/main/resources/application-dev.properties
+++ b/springboot-demo-23/src/main/resources/application-dev.properties
@@ -48,7 +48,8 @@ spring.cache.type=redis
 spring.cache.ehcache.config=classpath:config/ehcache.xml
 
 
-# ACTIVEMQ (ActiveMQProperties)
+# ACTIVEMQ (ActiveMQProperties) 
+# 开启这个配置spring.activemq.in-memory=true 是为了测试，下面这些配置可以连接外部mq
 spring.activemq.in-memory=true
 #spring.activemq.broker-url= 
 #spring.activemq.password= 
