使用 SQL关系型数据库-h2 嵌入式数据库的使用

--- a/springboot-demo-18/pom.xml
+++ b/springboot-demo-18/pom.xml
@@ -50,6 +50,11 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<!--REST代理  -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
