--- a/springboot-demo-25/pom.xml
+++ b/springboot-demo-25/pom.xml
@@ -69,6 +69,11 @@
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
 
 
 		<dependency>
