发送邮件-使用模板邮件并实现多账号轮询发送

--- a/springboot-demo-26/src/main/resources/application-dev.properties
+++ b/springboot-demo-26/src/main/resources/application-dev.properties
@@ -51,8 +51,8 @@ spring.cache.ehcache.config=classpath:config/ehcache.xml
 
 
 # mail
-spring.mail.host: smtp.exmail.qq.com
-spring.mail.username:
+spring.mail.host:smtp.163.com
+spring.mail.username:titaniume@163.com
 spring.mail.password:
 spring.mail.properties.mail.smtp.auth: true
 spring.mail.properties.debug:true
